[ADD] marcar como vista una pelicula

--- a/template.yaml
+++ b/template.yaml
@@ -31,7 +31,8 @@ Resources:
                   - logs:CreateLogGroup
                   - logs:CreateLogStream
                   - logs:PutLogEvents
-                Resource: arn:aws:logs:*:*:*
+                Resource: '*'
+
   MovieApi:
     Type: AWS::Serverless::Api
     Properties:
@@ -68,6 +69,7 @@ Resources:
             Path: /create
             RestApiId: !Ref MovieApi
             Method: post
+
   GetMovieFunction:
     Type: AWS::Serverless::Function
     Properties:
@@ -77,12 +79,13 @@ Resources:
       Architectures:
         - x86_64
       Events:
-        CreateMovie:
+        GetMovie:
           Type: Api
           Properties:
             Path: /getAll
             RestApiId: !Ref MovieApi
             Method: get
+
   DisableMovieFunction:
     Type: AWS::Serverless::Function
     Properties:
@@ -92,12 +95,13 @@ Resources:
       Architectures:
         - x86_64
       Events:
-        CreateMovie:
+        DisableMovie:
           Type: Api
           Properties:
             Path: /disable/{id}
             RestApiId: !Ref MovieApi
             Method: put
+
   EnableMovieFunction:
     Type: AWS::Serverless::Function
     Properties:
@@ -107,12 +111,13 @@ Resources:
       Architectures:
         - x86_64
       Events:
-        CreateMovie:
+        EnableMovie:
           Type: Api
           Properties:
             Path: /enable/{id}
             RestApiId: !Ref MovieApi
             Method: put
+
   UpdateMovieFunction:
     Type: AWS::Serverless::Function
     Properties:
@@ -128,6 +133,22 @@ Resources:
             Path: /update/{id}
             RestApiId: !Ref MovieApi
             Method: put
+
+  WatchedMovieFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: watched_movie/
+      Handler: app.lambda_handler
+      Runtime: python3.12
+      Architectures:
+        - x86_64
+      Events:
+        WatchedMovie:
+          Type: Api
+          Properties:
+            Path: /watched
+            RestApiId: !Ref MovieApi
+            Method: post
 
 Outputs:
   HelloWorldApi:
@@ -145,33 +166,40 @@ Outputs:
     Value: !GetAtt CreateMovieFunction.Arn
 
   GetMovieApi:
-    Description: "API Gateway endpoint URL for Prod stage for create movie function"
+    Description: "API Gateway endpoint URL for Prod stage for get movies function"
     Value: !Sub "https://${MovieApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/getAll"
   GetMovieFunction:
     Description: "Get Movie Lambda Function ARN"
     Value: !GetAtt GetMovieFunction.Arn
 
   DisableMovieApi:
-    Description: "API Gateway endpoint URL for Prod stage for create movie function"
+    Description: "API Gateway endpoint URL for Prod stage for disable movie function"
     Value: !Sub "https://${MovieApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/disable/{id}"
   DisableMovieFunction:
-    Description: "Get Movie Lambda Function ARN"
+    Description: "Disable Movie Lambda Function ARN"
     Value: !GetAtt DisableMovieFunction.Arn
 
   EnableMovieApi:
-    Description: "API Gateway endpoint URL for Prod stage for create movie function"
+    Description: "API Gateway endpoint URL for Prod stage for enable movie function"
     Value: !Sub "https://${MovieApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/enable/{id}"
   EnableMovieFunction:
-    Description: "Get Movie Lambda Function ARN"
+    Description: "Enable Movie Lambda Function ARN"
     Value: !GetAtt EnableMovieFunction.Arn
 
   UpdateMovieApi:
     Description: "API Gateway endpoint URL for Prod stage for update movie function"
-    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/update/{id}"
+    Value: !Sub "https://${MovieApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/update/{id}"
   UpdateMovieFunction:
     Description: "Update Movie Lambda Function ARN"
     Value: !GetAtt UpdateMovieFunction.Arn
 
+  WatchedMovieApi:
+    Description: "API Gateway endpoint URL for Prod stage for watched movie function"
+    Value: !Sub "https://${MovieApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/watched"
+  WatchedMovieFunction:
+    Description: "Watched Movie Lambda Function ARN"
+    Value: !GetAtt WatchedMovieFunction.Arn
+
   LambdaExecutionRole:
-    Description: "Implicit IAM Role created for lambdas functions"
+    Description: "Implicit IAM Role created for lambda functions"
     Value: !GetAtt LambdaExecutionRole.Arn
