--- a/samconfig.toml
+++ b/samconfig.toml
@@ -17,11 +17,11 @@ lint = true
 capabilities = "CAPABILITY_IAM"
 confirm_changeset = true
 resolve_s3 = true
-s3_prefix = "Movier"
+s3_prefix = "MovierTest"
 region = "us-east-2"
 disable_rollback = true
 image_repositories = []
-stack_name = "Movier"
+stack_name = "MovierTest"
 
 [default.package.parameters]
 resolve_s3 = true
