permisos de iam para la cuenta de diego de aws intento 2

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
           pip install -r requirements.txt
       - name: Install dependencies for delete_comment
         run: |
-          cd comment/delete_comment
+          cd comments/delete_comment
           pip install -r requirements.txt
       - name: Install dependencies for get_comments
         run: |
