--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,8 +88,8 @@ jobs:
       - name: Build SAM application
         run: sam build
       - name: Deploy SAM application
-        run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name Movier --capabilities CAPABILITY_IAM --profile diegocam
+        run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name Movier --capabilities CAPABILITY_IAM --profile diegocam2
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: us-east-2
+          AWS_DEFAULT_REGION: us-east-1
