--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.organization=diositodiego
 
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=.
+sonar.sources=comments,login,movies,watched
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
