--- a/template.yaml
+++ b/template.yaml
@@ -32,6 +32,70 @@ Resources:
                   - logs:CreateLogStream
                   - logs:PutLogEvents
                 Resource: '*'
+        - PolicyName: CognitoAdminInitiateAuth
+          PolicyDocument:
+              Version: '2012-10-17'
+              Statement:
+                - Effect: Allow
+                  Action:
+                    - cognito-idp:AdminInitiateAuth
+                    - cognito-idp:AdminRespondToAuthChallenge
+                    - cognito-idp:AdminSetUserPassword
+                    - cognito-idp:AdminCreateUser
+                    - cognito-idp:AdminDeleteUser
+                    - cognito-idp:AdminUpdateUserAttributes
+                    - cognito-idp:AdminListGroupsForUser
+                    - cognito-idp:AdminAddUserToGroup
+                    - cognito-idp:AdminRemoveUserFromGroup
+                    - cognito-idp:AdminGetUser
+                    - cognito-idp:AdminGetUserAttributeVerificationCode
+                    - cognito-idp:AdminConfirmSignUp
+                    - cognito-idp:AdminForgetDevice
+                    - cognito-idp:AdminConfirmDevice
+                    - cognito-idp:AdminUpdateDeviceStatus
+                    - cognito-idp:AdminEnableUser
+                    - cognito-idp:AdminDisableUser
+                    - cognito-idp:AdminResetUserPassword
+                    - cognito-idp:AdminSetUserSettings
+                    - cognito-idp:AdminUpdateAuthEventFeedback
+                    - cognito-idp:AdminUserGlobalSignOut
+                  Resource: 'arn:aws:cognito-idp:us-east-1:*:*'
+
+  MyCognitoUserPool:
+    Type: AWS::Cognito::UserPool
+    Properties:
+      UserPoolName: MyUserPool
+      UsernameAttributes:
+        - email
+      AutoVerifiedAttributes:
+        - email
+      Policies:
+        PasswordPolicy:
+          MinimumLength: 8
+          RequireUppercase: True
+          RequireLowercase: True
+          RequireNumbers: True
+          RequireSymbols: True
+
+  AdminGroup:
+    Type: AWS::Cognito::UserPoolGroup
+    Properties:
+      GroupName: Admins
+      UserPoolId: !Ref MyCognitoUserPool
+      Precedence: 1
+
+  UsersGroup:
+    Type: AWS::Cognito::UserPoolGroup
+    Properties:
+      GroupName: Users
+      UserPoolId: !Ref MyCognitoUserPool
+      Precedence: 2
+
+  AuthApi:
+    Type: AWS::Serverless::Api
+    Properties:
+      StageName: Prod
+      Name: AuthApi
 
   MovieApi:
     Type: AWS::Serverless::Api
@@ -51,12 +115,46 @@ Resources:
       Name: WatchedApi
       StageName: Prod
 
+  LoginFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: login/login_users/
+      Handler: app.lambda_handler
+      Runtime: python3.11
+      Role: !GetAtt LambdaExecutionRole.Arn
+      Architectures:
+        - x86_64
+      Events:
+        Login:
+          Type: Api
+          Properties:
+            RestApiId: !Ref AuthApi
+            Path: /login
+            Method: post
+
+  SetPasswordFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: login/set_password/
+      Handler: app.lambda_handler
+      Runtime: python3.11
+      Role: !GetAtt LambdaExecutionRole.Arn
+      Architectures:
+        - x86_64
+      Events:
+        SetPassword:
+          Type: Api
+          Properties:
+            RestApiId: !Ref AuthApi
+            Path: /set_password
+            Method: post
+
   CreateMovieFunction:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: movies/create_movie/
       Handler: app.lambda_handler
-      Runtime:  python3.12
+      Runtime: python3.12
       Architectures:
         - x86_64
       Events:
@@ -72,7 +170,7 @@ Resources:
     Properties:
       CodeUri: movies/get_movies/
       Handler: app.lambda_handler
-      Runtime:  python3.12
+      Runtime: python3.12
       Architectures:
         - x86_64
       Events:
@@ -88,7 +186,7 @@ Resources:
     Properties:
       CodeUri: movies/update_movie/
       Handler: app.lambda_handler
-      Runtime:  python3.12
+      Runtime: python3.12
       Architectures:
         - x86_64
       Events:
@@ -120,7 +218,7 @@ Resources:
     Properties:
       CodeUri: comments/create_comment/
       Handler: app.lambda_handler
-      Runtime:  python3.12
+      Runtime: python3.12
       Architectures:
         - x86_64
       Events:
@@ -131,14 +229,12 @@ Resources:
             RestApiId: !Ref CommentApi
             Method: post
 
-
-
   GetCommentsFunction:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: comments/get_comments/
       Handler: app.lambda_handler
-      Runtime:  python3.12
+      Runtime: python3.12
       Architectures:
         - x86_64
       Events:
@@ -149,14 +245,12 @@ Resources:
             RestApiId: !Ref CommentApi
             Method: get
 
-
-
   DeleteCommentFunction:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: comments/delete_comment/
       Handler: app.lambda_handler
-      Runtime:  python3.12
+      Runtime: python3.12
       Architectures:
         - x86_64
       Events:
@@ -172,7 +266,7 @@ Resources:
     Properties:
       CodeUri: watched/watched_movie/
       Handler: app.lambda_handler
-      Runtime:  python3.12
+      Runtime: python3.12
       Architectures:
         - x86_64
       Events:
@@ -188,7 +282,7 @@ Resources:
     Properties:
       CodeUri: watched/get_watched_movies_user/
       Handler: app.lambda_handler
-      Runtime:  python3.12
+      Runtime: python3.12
       Architectures:
         - x86_64
       Events:
@@ -200,8 +294,6 @@ Resources:
             Method: get
 
 Outputs:
-
-
   CreateMovieApi:
     Description: "API Gateway endpoint URL for Prod stage for create movie function"
     Value: !Sub "https://${MovieApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/create"
@@ -229,7 +321,6 @@ Outputs:
   ChangeStatusMovieFunction:
     Description: "Update Movie Lambda Function ARN"
     Value: !GetAtt ChangeStatusMovieFunction.Arn
-
 
   CreateCommentApi:
     Description: "API Gateway endpoint URL for Prod stage for create comment function"
@@ -265,6 +356,14 @@ Outputs:
   GetWatchedMovieFunction:
     Description: "Watched Movie Lambda Function ARN"
     Value: !GetAtt GetWatchedMovieFunction.Arn
+
+  LoginApi:
+    Description: "API Gateway endpoint URL for LoginFunction"
+    Value: !Sub "https://${AuthApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/login"
+
+  SetPasswordApi:
+    Description: "API Gateway endpoint URL for SetPasswordFunction"
+    Value: !Sub "https://${AuthApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/set_password"
 
   LambdaExecutionRole:
     Description: "Implicit IAM Role created for lambda functions"
