--- a/samconfig.toml
+++ b/samconfig.toml
@@ -1,8 +1,8 @@
 version = 0.1
 [default.deploy.parameters]
-stack_name = "Movier44"
+stack_name = "MovierBack"
 resolve_s3 = true
-s3_prefix = "Movier44"
+s3_prefix = "MovierBack"
 region = "us-east-1"
 confirm_changeset = true
 capabilities = "CAPABILITY_IAM"
