--- a/template.yaml
+++ b/template.yaml
@@ -64,7 +64,14 @@ Resources:
                   - cognito-idp:AdminUpdateAuthEventFeedback
                   - cognito-idp:AdminUserGlobalSignOut
                 Resource: "arn:aws:cognito-idp:us-east-1:*:*"
-
+        - PolicyName: SSMGetParameter
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - secretsmanager:GetSecretValue
+                Resource: "arn:aws:secretsmanager:us-east-1:533267376951:secret:prd/dataBase/appMovier-123456"
   AuthApi:
     Type: AWS::Serverless::Api
     Properties:
@@ -201,6 +208,22 @@ Resources:
           Type: Api
           Properties:
             Path: /getMovie/{id}/{user_id}
+            RestApiId: !Ref MovieApi
+            Method: get
+
+  SearchMoviesFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: movies/search_movies/
+      Handler: app.lambda_handler
+      Runtime: python3.12
+      Architectures:
+        - x86_64
+      Events:
+        GetMovie:
+          Type: Api
+          Properties:
+            Path: /searchMovies/{name}
             RestApiId: !Ref MovieApi
             Method: get
 
@@ -344,7 +367,12 @@ Outputs:
   GetMovieByIdFunction:
     Description: "Get Movie Lambda Function ARN"
     Value: !GetAtt GetMovieByIdFunction.Arn
-
+  SearchMoviesApi:
+    Description: "API Gateway endpoint URL for Prod stage for get movie by id function"
+    Value: !Sub "https://${MovieApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/searchMovies/{name}"
+  SearchMoviesFunction:
+    Description: "Get Movie Lambda Function ARN"
+    Value: !GetAtt SearchMoviesFunction.Arn
   UpdateMovieApi:
     Description: "API Gateway endpoint URL for Prod stage for update movie function"
     Value: !Sub "https://${MovieApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/update/{id}"
