--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,14 +15,23 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
       - name: Setup Python
         uses: actions/setup-python@v3
         with:
-          python-version: ${{ matrix.python }}
-      - name: Install tox and any other packages
-        run: pip install tox
-      - name: Run tox
-        run: tox -e py
+          python-version: '3.12'
+
+      - name: Install Dependencies
+        run: |
+            python -m pip install --upgrade pip
+            pip install -r requirements.txt
+            pip install coverage
+
+      - name: Run Tests with Coverage
+        run: |
+          coverage run -m unittest discover -s tests/unit
+          coverage xml  # Generate coverage.xml file
+
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
