[ADD] Cognito con authorizador NO MERGEAR

--- a/template.yaml
+++ b/template.yaml
@@ -38,7 +38,7 @@ Resources:
                 Resource: "*"
         - PolicyName: CognitoAdminInitiateAuth
           PolicyDocument:
-            Version: "2012-10-17"
+            Version: '2012-10-17'
             Statement:
               - Effect: Allow
                 Action:
@@ -63,7 +63,7 @@ Resources:
                   - cognito-idp:AdminSetUserSettings
                   - cognito-idp:AdminUpdateAuthEventFeedback
                   - cognito-idp:AdminUserGlobalSignOut
-                Resource: "arn:aws:cognito-idp:us-east-1:*:*"
+                Resource: 'arn:aws:cognito-idp:us-east-1:*:*'
         - PolicyName: SSMGetParameter
           PolicyDocument:
             Version: "2012-10-17"
@@ -72,29 +72,102 @@ Resources:
                 Action:
                   - secretsmanager:GetSecretValue
                 Resource: "arn:aws:secretsmanager:us-east-1:533267376951:secret:prd/dataBase/appMovier-123456"
+
+  MyCognitoUserPool:
+    Type: AWS::Cognito::UserPool
+    Properties:
+      UserPoolName: Movier2
+      UsernameAttributes:
+        - email
+      AutoVerifiedAttributes:
+        - email
+      Policies:
+        PasswordPolicy:
+          MinimumLength: 8
+          RequireUppercase: True
+          RequireLowercase: True
+          RequireNumbers: True
+          RequireSymbols: True
+
+  AdminGroup:
+    Type: AWS::Cognito::UserPoolGroup
+    Properties:
+      GroupName: Administrador
+      UserPoolId: !Ref MyCognitoUserPool
+      Precedence: 1
+
+  UsersGroup:
+    Type: AWS::Cognito::UserPoolGroup
+    Properties:
+      GroupName: Usuario
+      UserPoolId: !Ref MyCognitoUserPool
+      Precedence: 2
+
   AuthApi:
     Type: AWS::Serverless::Api
     Properties:
       StageName: Prod
       Name: AuthApi
 
+  MovieAuthorizerMovier:
+    Type: AWS::ApiGateway::Authorizer
+    Properties:
+      Name: MovieAuthorizerMovier
+      IdentitySource: method.request.header.Authorization
+      RestApiId: !Ref MovieApi
+      Type: COGNITO_USER_POOLS
+      ProviderARNs:
+        - !GetAtt MyCognitoUserPool.Arn
+
   MovieApi:
     Type: AWS::Serverless::Api
     Properties:
       Name: MovieApi
       StageName: Prod
+      Auth:
+        Authorizers:
+          MovieAuthorizerMovier:
+            UserPoolArn: !GetAtt MyCognitoUserPool.Arn
+
+  CommentAuthorizerMovier:
+    Type: AWS::ApiGateway::Authorizer
+    Properties:
+      Name: CommentAuthorizerMovier
+      IdentitySource: method.request.header.Authorization
+      RestApiId: !Ref CommentApi
+      Type: COGNITO_USER_POOLS
+      ProviderARNs:
+        - !GetAtt MyCognitoUserPool.Arn
 
   CommentApi:
     Type: AWS::Serverless::Api
     Properties:
       Name: CommentApi
       StageName: Prod
+      Auth:
+        Authorizers:
+          CommentAuthorizerMovier:
+            UserPoolArn: !GetAtt MyCognitoUserPool.Arn
+
+  WatchedAuthorizerMovier:
+    Type: AWS::ApiGateway::Authorizer
+    Properties:
+      Name: WatchedAuthorizerMovier
+      IdentitySource: method.request.header.Authorization
+      RestApiId: !Ref WatchedApi
+      Type: COGNITO_USER_POOLS
+      ProviderARNs:
+        - !GetAtt MyCognitoUserPool.Arn
 
   WatchedApi:
     Type: AWS::Serverless::Api
     Properties:
       Name: WatchedApi
       StageName: Prod
+      Auth:
+        Authorizers:
+          WatchedAuthorizerMovier:
+            UserPoolArn: !GetAtt MyCognitoUserPool.Arn
 
   LoginFunction:
     Type: AWS::Serverless::Function
@@ -162,6 +235,8 @@ Resources:
             Path: /create
             RestApiId: !Ref MovieApi
             Method: post
+            Auth:
+              Authorizer: MovieAuthorizerMovier
 
   GetMovieFunction:
     Type: AWS::Serverless::Function
@@ -178,6 +253,8 @@ Resources:
             Path: /getAll
             RestApiId: !Ref MovieApi
             Method: get
+            Auth:
+              Authorizer: MovieAuthorizerMovier
 
   GetAllMovieFunction:
     Type: AWS::Serverless::Function
@@ -194,6 +271,8 @@ Resources:
             Path: /getAllMovies
             RestApiId: !Ref MovieApi
             Method: get
+            Auth:
+              Authorizer: MovieAuthorizerMovier
 
   GetMovieByIdFunction:
     Type: AWS::Serverless::Function
@@ -210,6 +289,8 @@ Resources:
             Path: /getMovie/{id}/{user_id}
             RestApiId: !Ref MovieApi
             Method: get
+            Auth:
+              Authorizer: MovieAuthorizerMovier
 
   SearchMoviesFunction:
     Type: AWS::Serverless::Function
@@ -226,6 +307,8 @@ Resources:
             Path: /searchMovies/{name}
             RestApiId: !Ref MovieApi
             Method: get
+            Auth:
+              Authorizer: MovieAuthorizerMovier
 
   UpdateMovieFunction:
     Type: AWS::Serverless::Function
@@ -242,6 +325,8 @@ Resources:
             Path: /update/{id}
             RestApiId: !Ref MovieApi
             Method: put
+            Auth:
+              Authorizer: MovieAuthorizerMovier
 
   ChangeStatusMovieFunction:
     Type: AWS::Serverless::Function
@@ -258,6 +343,8 @@ Resources:
             Path: /status/{id}
             RestApiId: !Ref MovieApi
             Method: patch
+            Auth:
+              Authorizer: MovieAuthorizerMovier
 
   CreateCommentFunction:
     Type: AWS::Serverless::Function
@@ -274,6 +361,8 @@ Resources:
             Path: /create
             RestApiId: !Ref CommentApi
             Method: post
+            Auth:
+              Authorizer: CommentAuthorizerMovier
 
   GetCommentsFunction:
     Type: AWS::Serverless::Function
@@ -290,6 +379,8 @@ Resources:
             Path: /getComment/{id}
             RestApiId: !Ref CommentApi
             Method: get
+            Auth:
+              Authorizer: CommentAuthorizerMovier
 
   DeleteCommentFunction:
     Type: AWS::Serverless::Function
@@ -306,6 +397,8 @@ Resources:
             Path: /delete
             RestApiId: !Ref CommentApi
             Method: delete
+            Auth:
+              Authorizer: CommentAuthorizerMovier
 
   WatchedMovieFunction:
     Type: AWS::Serverless::Function
@@ -322,6 +415,8 @@ Resources:
             Path: /watched
             RestApiId: !Ref WatchedApi
             Method: post
+            Auth:
+              Authorizer: WatchedAuthorizerMovier
 
   GetWatchedMovieFunction:
     Type: AWS::Serverless::Function
@@ -338,6 +433,8 @@ Resources:
             Path: /watched/user/{id}
             RestApiId: !Ref WatchedApi
             Method: get
+            Auth:
+              Authorizer: WatchedAuthorizerMovier
 
 Outputs:
   CreateMovieApi:
